# vibetty

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.zh.md
examples/: font_test.rs  screenshot_test.rs
resources/: app.js  index.html  setup.html
resources/vosk/: index.html
src/: config.rs  main.rs  protocol.rs  static_page.rs  util.rs  ws.rs
src/asr/: bailian.rs  mod.rs
src/screenshot/: canvas.rs  font.rs  mod.rs  theme.rs  utils.rs
src/terminal/: claude.rs  mod.rs  pty.rs
src/types/: claude.rs
src/ui/: mod.rs
