[package]
name = "vibetty"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

anyhow = "1.0"

wav_io = "0.1.15"

axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.12.0", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["fs"] }

tokio = { version = "1", features = ["full"] }


echokit_terminal = { git = "https://github.com/second-state/echokit_pty.git", branch = "main" }
futures-util = "0.3.32"

reqwest = { version = "0.13", features = ["multipart", "json", "stream"] }
reqwest-websocket = "0.6.0"

hanconv = "0.5.0"
bytes = "1.11.1"
uuid = { version = "1.21.0", features = ["v4"] }
